--- a/examples/hello-vue-cli/package.json
+++ b/examples/hello-vue-cli/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "@examples/hello-world",
+  "name": "@examples/hello-vue-cli",
   "version": "0.1.0",
   "private": true,
+  "main": "./src/main.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
