--- a/examples/hello-vue-cli/package.json
+++ b/examples/hello-vue-cli/package.json
@@ -5,8 +5,7 @@
   "main": "./src/main.js",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "vue-cli-service build"
   },
   "dependencies": {
     "core-js": "^3.6.5",
