--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "serve:hello-vue-cli": "yarn workspace @examples/hello-vue-cli serve",
     "serve:hello-cdn": "yarn workspace @examples/hello-cdn serve",
     "build:hello-vue-cli": "yarn workspace @examples/hello-vue-cli build",
-    "lint:hello-vue-cli": "yarn workspace @examples/hello-vue-cli lint",
-    "lint": "vue-cli-service lint",
+    "lint": "vue-cli-service lint ./examples",
     "prepare": "husky install"
   },
   "lint-staged": {
